--- a/app/src/main/res/layout/activity_category_dish_list.xml
+++ b/app/src/main/res/layout/activity_category_dish_list.xml
@@ -13,10 +13,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
+        android:id="@+id/smart_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_view">
+        app:layout_constraintTop_toBottomOf="@+id/title_view"
+        app:srlEnableLoadMore="false">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
