--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -64,7 +64,9 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_layout">
+        app:layout_constraintTop_toBottomOf="@+id/top_layout"
+        app:srlEnableLoadMore="false"
+        app:srlEnableRefresh="false">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
