--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -60,7 +60,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_top_layout">
+        app:layout_constraintTop_toBottomOf="@+id/home_top_layout"
+        app:srlEnableLoadMore="false">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
