--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -15,7 +15,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/audit_button"
         app:layout_constraintTop_toBottomOf="@id/title_view">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -81,19 +81,6 @@
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@id/material_title" />
 
-            <TextView
-                android:id="@+id/practice_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:text="做法"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/material_layout" />
-
             <LinearLayout
                 android:id="@+id/practice_layout"
                 android:layout_width="match_parent"
@@ -102,7 +89,19 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="15dp"
                 android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@id/practice_title" />
+                app:layout_constraintTop_toBottomOf="@id/material_layout" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <TextView
+        android:id="@+id/audit_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/red_500"
+        android:gravity="center"
+        android:text="通过审核"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
