--- a/app/src/main/res/layout/mine_fragment.xml
+++ b/app/src/main/res/layout/mine_fragment.xml
@@ -86,6 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/audit_item" />
 
     <com.wuhuabin.cookbook.views.MineItemView
