--- a/app/src/main/res/layout/category_select_item.xml
+++ b/app/src/main/res/layout/category_select_item.xml
@@ -2,11 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/category_item_layout"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/category_normal_bg"
-    android:minWidth="80dp">
+    android:background="@drawable/category_normal_bg">
 
     <TextView
         android:id="@+id/category_name"
@@ -16,7 +15,6 @@
         android:paddingTop="8dp"
         android:paddingRight="10dp"
         android:paddingBottom="8dp"
-        android:text="123"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
